plugins {
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'java'
    id 'application'
    id "org.flywaydb.flyway" version '8.5.12'
}

dependencies {
    implementation project(path: ':metalor')
    implementation project(path: ':core')

    implementation ('com.github.javafaker:javafaker:1.0.2') { exclude module: 'org.yaml' }
    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.26'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-ui'

    runtimeOnly 'com.google.flogger:flogger-slf4j-backend'
    runtimeOnly 'ch.qos.logback:logback-classic'
    runtimeOnly 'net.logstash.logback:logstash-logback-encoder'

}

application {
    mainClass = 'com.smarttrade.demo.SmartTradeDemoApplication'
}
applicationDefaultJvmArgs += ["--enable-preview"]

springBoot {
    buildInfo()
}
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
